change heading spacing to padding because we need to use fixed height for the main content block

--- a/source/scss/base.scss
+++ b/source/scss/base.scss
@@ -95,3 +95,30 @@ footer {
     width: 100%;
 }
 
+h1 {
+    margin: 0;
+    padding: 0.67em 0;
+    font-size: 1.9em;
+    font-weight: bold;
+}
+
+h2 {
+    margin: 0;
+    padding: 1rem 0;
+}
+
+h3 {
+    margin: 0;
+    padding: 1rem 0;
+}
+
+h4 {
+    margin: 0;
+    padding: 1.33em 0;
+}
+
+h5 {
+    margin: 0;
+    padding: 1.67em 0;
+}
+
